--- a/index.html
+++ b/index.html
@@ -78,47 +78,41 @@
         </div>    
         </section>
 
+
         <section>
-        <div class="contenedor_limite">
-            <h3>Menu diario</h3>
-                <div class="contenedor_padre">
-                    <div class="card">
-                        <p>Milanesas con pure.</p>
-                        <img class="imagen" src="./img/pure-de-papa-con-pollo-broaster-large-qlJiPE4lyS.jpeg" alt="milanesa">
+                <h3>Menu diario</h3>
+            <div class="contenedorpadre_carrusel">
+                <div class="contenedor_carrusel">
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/img/3-5.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    <div class="carousel-item">
+                        <img src="/img/espaguetis-con-albondigas-spaghetti-and-meatballs.jpg" class="d-block w-100" alt="...">
                     </div>
-
-                    <div class="card">
-                        <p>Espaguetti de albondigas.</p>
-                        <img class="imagen" src="./img/espaguetis-con-albondigas-spaghetti-and-meatballs.jpg" alt="Espaguetti">
+                    <div class="carousel-item">
+                        <img src="/img/pastel-carne1jpg.webp" class="d-block w-100" alt="...">
                     </div>
-
-                    <div class="card">
-                        <p>Fideos con tuco.</p>
-                        <img class="imagen" src="./img/3-5.jpg" alt="fideos">
                     </div>
-                    <div class="card">
-                        <p>Rabioles con salsa blanca.</p>
-                        <img class="imagen" src="./img/dscn7155.jpg" alt="ravioles">
-                    </div>
-                    <div class="card">
-                        <p>Ratatouille</p>
-                        <img class="imagen" src="./img/summerratatouille_thumbnail.jpg" alt="ratatouille">
-                    </div>
-                    <div class="card">
-                        <p>Guiso de arroz con pollo.</p>
-                        <img class="imagen" src="./img/imagepng.webp" alt="Arroz con pollo">
-                    </div>
-                    <div class="card">
-                        <p>Pastel de papa.</p>
-                        <img class="imagen" src="./img/pastel-carne1jpg.webp" alt="Pastel de papa">
-                    </div>
-                    <div class="card">
-                        <p>Asado bien argentino.</p>
-                        <img class="imagen" src="./img/LKICE6H3DFAHJEWHGXRVLNTASI.avif" alt="Asado, papá">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden"></span>
+                        </button>
                     </div>
                 </div>
-        </div>
-        </section>
+            </div>
+        </section>  
+
 
         <section>
         <div class="contenedor_limite">
